fix column widths and alignments

--- a/src/app/components/todo-lists-table/todo-lists-table.component.scss
+++ b/src/app/components/todo-lists-table/todo-lists-table.component.scss
@@ -17,3 +17,7 @@
 		line-height: 48px;
 	}
 }
+
+.align-right {
+	text-align: right;
+}
